--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://us-cdbr-iron-east-04.cleardb.net:3306/heroku_b0dbcd4c81bda83
 spring.datasource.username=bf5097e511d14a
-spring.datasource.password=912fb6cd
+spring.datasource.password=912fb6
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
